# utorrent

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  license.txt  setup.cfg  tox.ini
src/utorrent/: client.py  upload.py
tests/: import_test.py
