[metadata]
name = utorrent
version = 0.0.0
description = A client for the uTorrent API
author = Labrys of Knossos
author_email = labrys@users.noreply.github.com
url = https://github.com/labrys/utorrent
license = MIT
classifiers =
        # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
        Development Status :: 5 - Production/Stable
        Operating System :: MacOS
        Operating System :: MacOS :: MacOS X
        Operating System :: Microsoft
        Operating System :: Microsoft :: Windows
        Operating System :: POSIX
        Operating System :: Unix
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:

[options.packages.find]
where = src
